--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -2,12 +2,12 @@
 service: avto_app
 
 # Name of the container image.
-image: your-user/avto_app
+image: amerhrustic/avto_app
 
 # Deploy to these servers.
 servers:
   web:
-    - 192.168.0.1
+    - 97.74.107.28
   # job:
   #   hosts:
   #     - 192.168.0.1
@@ -19,17 +19,18 @@ servers:
 # Note: If using Cloudflare, set encryption mode in SSL/TLS setting to "Full" to enable CF-to-app encryption.
 proxy:
   ssl: true
-  host: app.example.com
+  host: amerhrustic.online
 
 # Credentials for your image host.
 registry:
   # Specify the registry server, if you're not using Docker Hub
-  # server: registry.digitalocean.com / ghcr.io / ...
-  username: your-user
+  # server: registry.digitalocean.com / ghcr.io / ...<
+  server: ghcr.io
+  username: amerhrustic
 
   # Always use an access token rather than real password when possible.
   password:
-    - KAMAL_REGISTRY_PASSWORD
+  - GITHUB_TOKEN
 
 # Inject ENV variables into containers (secrets come from .kamal/secrets).
 env:
@@ -88,8 +89,8 @@ builder:
   #   - RAILS_MASTER_KEY
 
 # Use a different ssh user than root
-# ssh:
-#   user: app
+ssh:
+user: user
 
 # Use accessory services (secrets come from .kamal/secrets).
 # accessories:
